[package]
name = "maze-racer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
libm = "0.2"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"]}
heapless = "0.7.16"
maze_gen = { git = "https://github.com/BeefOnWeck/maze-gen.git" }